--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -16,6 +16,7 @@ cursive;
   .mat-button {
     position: absolute;
     padding: 0;
+    text-align: unset;
 
     .mat-button-wrapper {
       width: 100%;
@@ -49,119 +50,41 @@ cursive;
   }
 }
 
-.mat-button {
-  text-align: unset;
-}
-
-.character-list {
+.centre-container {
   width: 100%;
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
-
-  .character-row {
-    min-height: 20px;
-    flex: 1 1 0;
-    position: relative;
-  }
-
-  .good {
-    border-left: 15px solid lightskyblue;
-  }
-
-  .evil {
-    border-left: 15px solid pink;
-  }
-
-  .portrait {
-    margin-right: 15px;
-    min-height: 20px;
-    height: 100%;
-    width: auto;
-  }
-
-  .name {
-    font-family: $font-family;
-    font-size: 30px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  .number {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 15px;
-    font-family: $font-family;
-    font-size: 50px;
-  }
-
-  .enabled {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 15px;
-    min-height: 20px;
-    height: 40%;
-    width: auto;
-  }
 }
 
 .footer-menu {
   height: 150px;
-}
 
-// Fixed position buttons
-
-.player-button {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 25px;
-  left: 25px;
-
-  .player-button-image {
-    height: 100%;
-    width: 100%;
-  }
-
-  .player-button-text {
-    font-family: $font-family;
-    font-size: 70px;
+  .player-button {
+    width: 100px;
+    height: 100px;
     position: absolute;
-    left: 48%;
-    top: 42%;
-    margin: 0;
-    transform: translate(-50%, -50%);
+    bottom: 25px;
+    left: 25px;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
-}
 
-.play-button {
-  width: 250px;
-  height: 100px;
-  position: absolute;
-  bottom: 25px;
-  left: 50%;
-  transform: translate(-50%, 0);
+  .settings-button {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
 
-  img {
-    height: 100%;
-    width: 100%;
-  }
-}
-
-.settings-button {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 25px;
-  right: 25px;
-
-  img {
-    height: 100%;
-    width: 100%;
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
